# it-tools-api

./: .dockerignore  .gitignore  Dockerfile  MCP_README.md  README.md  main.py  mcp_tools_server.py  pyproject.toml  start.sh
.github/workflows/: bump-minor.yml  bump-patch.yml  ci-analysis.yml  ci-build.yml  ci-deploy.yml  ci-release.yml
mcp_server/: __init__.py
mcp_server/prompts/: __init__.py
mcp_server/tools/: __init__.py  base64_converter.py  base_converter.py  basic_auth_generator.py  bip39_generator.py  case_converter.py  chmod_calculator.py  color_converter.py  cron_parser.py  data_converter.py  datetime_parser.py  docker_converter.py  email_processor.py  encryption_processor.py  eta_calculator.py  hash_calculator.py  hmac_calculator.py  html_entities_processor.py  iban_processor.py  ipv4_converter.py  ipv4_range_expander.py  ipv4_subnet_calculator.py  ipv6_ula_generator.py  json_csv_converter.py  json_diff.py  json_formatter.py  jwt_processor.py  list_converter.py  lorem_generator.py  mac_lookup.py  markdown_processor.py  math_evaluator.py  meta_tag_generator.py  nato_converter.py  phone_parser.py  roman_numeral_converter.py  uuid_generator.py
models/: ascii_text_drawer_models.py  base64_models.py  base_converter_models.py  basic_auth_models.py  bcrypt_models.py  bip39_models.py  case_converter_models.py  chmod_models.py  color_converter_models.py  cron_models.py  data_converter_models.py  datetime_models.py  docker_models.py  email_models.py  encryption_models.py  hash_models.py  hmac_models.py  html_entities_models.py  iban_models.py  ipv4_converter_models.py  ipv4_range_expander_models.py  ipv4_subnet_models.py  ipv6_ula_models.py  json_csv_converter_models.py  json_diff_models.py  json_models.py  jwt_models.py  list_converter_models.py  lorem_models.py  mac_address_generator_models.py  mac_address_lookup_models.py  markdown_models.py  math_eval_models.py  meta_tag_generator_models.py  mime_models.py  nato_alphabet_models.py  numeronym_models.py  password_strength_models.py  pdf_signature_checker_models.py  percentage_models.py  (+21 more)
routers/: ascii_text_drawer_router.py  base64_router.py  base_converter_router.py  basic_auth_router.py  bcrypt_router.py  bip39_router.py  case_converter_router.py  chmod_router.py  color_converter_router.py  cron_router.py  data_converter_router.py  datetime_router.py  docker_router.py  email_router.py  encryption_router.py  eta_router.py  hash_router.py  hmac_router.py  html_entities_router.py  iban_router.py  ipv4_converter_router.py  ipv4_range_expander_router.py  ipv4_subnet_router.py  ipv6_ula_router.py  json_csv_converter_router.py  json_diff_router.py  json_router.py  jwt_router.py  list_converter_router.py  lorem_router.py  mac_address_lookup_router.py  markdown_router.py  math_eval_router.py  meta_tag_generator_router.py  mime_router.py  nato_alphabet_router.py  numeronym_router.py  password_strength_router.py  pdf_signature_checker_router.py  percentage_router.py  (+23 more)
tests/mcp/tools/: README.md  test_base64_converter.py  test_base_converter.py  test_basic_auth_generator.py  test_bip39_generator.py  test_case_converter.py  test_chmod_calculator.py  test_color_converter.py  test_cron_parser.py  test_data_converter.py  test_datetime_parser.py  test_docker_converter.py  test_email_processor.py  test_encryption_processor.py  test_eta_calculator.py  test_hash_calculator.py  test_hmac_calculator.py  test_html_entities_processor.py  test_iban_processor.py  test_ipv4_converter.py  test_ipv4_range_expander.py  test_ipv6_ula_generator.py  test_json_csv_converter.py  test_json_diff.py  (+9 more)
tests/routers/: test_ascii_text_drawer_router.py  test_base64_router.py  test_base_converter_router.py  test_basic_auth_router.py  test_bcrypt_router.py  test_bip39_router.py  test_case_converter_router.py  test_chmod_router.py  test_color_converter_router.py  test_cron_router.py  test_data_converter_router.py  test_datetime_router.py  test_docker_router.py  test_email_router.py  test_encryption_router.py  test_eta_router.py  test_hash_router.py  test_hmac_router.py  test_html_entities_router.py  test_iban_router.py  test_ipv4_converter_router.py  test_ipv4_range_expander_router.py  test_ipv4_subnet_router.py  test_ipv6_ula_router.py  test_json_csv_converter_router.py  test_json_diff_router.py  test_json_router.py  test_jwt_router.py  test_list_converter_router.py  test_lorem_router.py  test_mac_address_lookup_router.py  test_markdown_router.py  test_math_eval_router.py  test_meta_tag_generator_router.py  test_mime_router.py  test_nato_alphabet_router.py  test_numeronym_router.py  test_password_strength_router.py  test_pdf_signature_checker_router.py  test_percentage_router.py  (+23 more)
(+6 files in other folders)
